--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "src/routes/index.ts",
+      "src": "/(.*)*",
       "dest": "src/main.ts",
       "methods": [
         "GET",
