--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "/src/main.ts",
-      "use": "@vercel/node"
+      "src": "dist/main.js",
+      "use": "@now/node-server"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)*",
-      "dest": "/dist/main",
-      "methods": [
-        "GET",
-        "POST",
-        "PATCH",
-        "DELETE",
-        "PUT"
-      ]
+      "src": "/(.*)",
+      "dest": "dist/main.js"
     }
   ]
 }
