--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.4.0",
     "mongoose": "^6.0.8",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,7 +47,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
+    "plugin": "^0.3.3",
     "prettier": "^2.3.2",
+    "serverless-offline": "^8.2.0",
+    "serverless-plugin-optimize": "^4.2.1-rc.1",
+    "serverless-plugin-typescript": "^2.1.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
